--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-minify": "0.0.14",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rimraf": "^0.2.0",
     "nodemon": "^1.10.2"
   },
   "scripts": {
