Updated gulp clean task

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.16.1",
+    "del": "^2.2.2",
     "eslint": "^3.6.1",
     "eslint-config-google": "^0.6.0",
     "gulp": "^3.9.1",
@@ -21,7 +22,6 @@
     "gulp-minify": "0.0.14",
     "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rimraf": "^0.2.0",
     "nodemon": "^1.10.2"
   },
   "scripts": {
